added component Loading; edited some style

--- a/src/components/MainIndicators/IndicatorItem/IndicatorItem.css
+++ b/src/components/MainIndicators/IndicatorItem/IndicatorItem.css
@@ -4,7 +4,7 @@
     margin: 10px 0;
 }
 
-.name-block {
+.title-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
