--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -3,3 +3,13 @@
     min-width: 100%;
     margin: 10px 0;
 }
+
+.graphic-block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.graphic-picture {
+    width: 800px;
+    margin: 10px;
+}
